Moving squares to avoid overlapping with a button of a similar color.

--- a/personal-site/src/assets/scss/blk-design-system-react/custom/_example-pages.scss
+++ b/personal-site/src/assets/scss/blk-design-system-react/custom/_example-pages.scss
@@ -513,7 +513,7 @@
       width: 200px;
       background-image: url($asset-base-path + "/img/square4.png");
       right: -50px;
-      top: 525px;
+      top: 725px;
     }
 
     .square-5{
@@ -521,8 +521,9 @@
       width: 150px;
       background-image: url($asset-base-path + "/img/square5.png");
       opacity: 0.5;
-      top: 500px;
-      right: 470px;
+      top: 640px;
+      right: 560px;
+
     }
 
     .square-6{
